# mypicocross

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst
picocross/: profile.py  states.py  transitions.py
tests/: test_profiles.py  test_states.py  test_transitions.py
